Update server to support location updates
